--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
     <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body> <header>
+<body> <header class="header">
     <nav>
         <h3 class="nav-title"  >Ma <span class="text-primary">r</span> y</h3>
         <ul>
@@ -22,6 +22,14 @@
             <li><button class="btn-primary" >Hire Me</button></li>
         </ul>
     </nav>
+    <div class="banner">
+<div class="banner-greeting"><h3>Hi,I am</h3>
+ <h1 class="banner-title"><h1>Atif Sharmila</h1>
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere ut fugit adipisci modi, ad labore suscipit. Molestiae voluptatum suscipit in </p>
+<button class="btn-primary">Download CV</button>
+<button>Contact</button></div>
+<img class="profile-picture" src="isha.png" alt="">
+    </div>
 </header>
     
 </body>
